--- a/src/main/resources/views/layouts/sidebar.html
+++ b/src/main/resources/views/layouts/sidebar.html
@@ -2,10 +2,11 @@
   <!-- Sidebar below header -->
   <div
     id="sidebar"
-    class="sticky top-16 w-[22.5rem] bg-white shadow-lg sidebar-transition sidebar-expanded sidebar-no-scroll transform transition-transform duration-300 -translate-x-full lg:translate-x-0 border-r-2"
+    class="fixed top-16 bottom-0 w-[22.5rem] bg-white shadow-lg sidebar-transition sidebar-expanded sidebar-no-scroll transform transition-transform duration-300 -translate-x-full lg:translate-x-0 border-r-2 z-[1]"
   >
     <!-- Navigation (rendered by JS) -->
     <nav id="adminSidebarNav" class="p-4 space-y-2 select-none"></nav>
-    <script defer src="/js/admin-sidebar.js"></script>
+    <script defer src="/js/sidebar.js"></script>
   </div>
 </div>
+
