--- a/src/main/resources/views/layouts/sidebar.html
+++ b/src/main/resources/views/layouts/sidebar.html
@@ -2,7 +2,7 @@
   <!-- Sidebar below header -->
   <div
     id="sidebar"
-    class="fixed top-16 bottom-0 w-[22.5rem] bg-white shadow-lg sidebar-transition sidebar-expanded sidebar-no-scroll border-r-2 z-[1]"
+    class="h-full bg-white shadow-lg sidebar-no-scroll border-r-2"
   >
     <!-- Navigation (rendered by JS) -->
     <nav id="adminSidebarNav" class="p-4 space-y-2 select-none"></nav>
