--- a/src/main/resources/views/layouts/sidebar.html
+++ b/src/main/resources/views/layouts/sidebar.html
@@ -1,4 +1,4 @@
-<div th:fragment="sidebar">
+<div th:fragment="sidebar" style="height: 100% !important">
   <!-- Sidebar below header -->
   <div
     id="sidebar"
