--- a/src/main/resources/views/admin/products.html
+++ b/src/main/resources/views/admin/products.html
@@ -1,6 +1,6 @@
 <div th:replace="~{layouts/authLayout :: layout('Sản phẩm', ~{::content})}">
   <div th:fragment="content">
-    <div class="bg-white rounded-lg shadow-sm p-6">
+    <div class="bg-white rounded-lg p-6">
       <div class="flex justify-between items-center mb-6">
         <h1 class="text-3xl font-bold text-gray-800">Danh mục sản phẩm</h1>
       </div>
