--- a/src/main/resources/views/layouts/authLayout.html
+++ b/src/main/resources/views/layouts/authLayout.html
@@ -31,7 +31,7 @@
         </aside>
 
         <!-- Page content -->
-        <main id="page-content" class="bg-white">
+        <main id="page-content" class="bg-white border-l-2">
           <div th:replace="${content}"></div>
         </main>
       </div>
