update fix split file product js

--- a/src/main/resources/views/admin/products/products.html
+++ b/src/main/resources/views/admin/products/products.html
@@ -96,5 +96,8 @@
   }
 </style>
 
-<!-- Products JavaScript -->
-<script defer src="/js/admin/products.js"></script>
+<!-- Products JavaScript Modules -->
+<script defer src="/js/admin/products/ui.js"></script>
+<script defer src="/js/admin/products/pagination.js"></script>
+<script defer src="/js/admin/products/api.js"></script>
+<script defer src="/js/admin/products/main.js"></script>
