update jquery modal show user

--- a/src/main/resources/views/admin/users.html
+++ b/src/main/resources/views/admin/users.html
@@ -210,7 +210,7 @@
   }
   
   #userProfileModal .transform {
-    transition: all 0.3s cubic-bezier(0.4, 0, 0.2, 1);
+    transition: all 0.2s ease;
     transform-origin: center;
   }
   
